# odd_lot_arb

./: README.md  pyproject.toml
src/odd_lot_arb/: __init__.py  __main__.py  edgar.py  finder.py  market.py  models.py  ui.py
